Updated HTML/CSS, programmed main JS
Major bug in the JS script causes the 3 hidden images to overlap/stack rather than the images becoming hidden again after next round begins

--- a/RockPaperScissors/index.html
+++ b/RockPaperScissors/index.html
@@ -12,7 +12,7 @@
         <h1>ROCK PAPER SCISSORS</h1>
     </div>
     <div class = "result">
-        <h2>Placeholder</h2>
+        <h2 id = "gameResult">Welcome!</h2>
     </div>
     <div class = "iconContainer">
         <div class = "playerIcon">
@@ -36,9 +36,19 @@
         
         <div class = "stats">
             <p>Game Details</p>
-            <p>Placeholder</p>
-            <p>Placeholder</p>
-            <p>Placeholder</p>
+            <div class = "details">
+                <div class = "text">
+                    <p>Wins:</p>
+                    <p>Losses:</p>
+                    <p>Games played:</p>
+                </div>
+
+                <div class = "numbers">
+                    <p id = "winCounter">0</p>
+                    <p id = "loseCounter">0</p>
+                    <p id = "gameCounter">0</p>
+                </div>
+            </div>
         </div>
     </div>
    </div>
